[package]
name = "proteinogenic"
version = "0.1.0"
edition = "2021"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
license = "MIT"
repository = "https://github.com/fastobo/proteinogenic"
homepage = "https://github.com/fastobo/proteinogenic"
description = "Chemical structure generation for protein sequences as SMILES string"
keywords = ["protein", "amino acid", "cheminformatics", "smiles", "formula"]
categories = ["science"]

[dependencies]
purr = "0.9.0"
