[package]
name = "proteinogenic"
version = "0.1.0"
edition = "2021"
authors = ["Martin Larralde <martin.larralde@embl.de>"]
license = "MIT"
repository = "https://github.com/althonos/proteinogenic"
homepage = "https://github.com/althonos/proteinogenic"
description = "Chemical structure generation for protein sequences as SMILES string"
keywords = ["protein", "aminoacid", "cheminformatics", "smiles", "formula"]
categories = ["science"]

[dependencies]
purr = "0.9.0"

[dev-dependencies]
pubchem = "0.1.1"
